Implementation of chrome extension.

--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
     // Comments are accepted in the manifest, even though it is JSON.
     "manifest_version": 3,
-    "name": "Chrome Extension v3 Starter",
-    "description": "A minimal example of a chrome extension using manifest v3",
+    "name": "ChatGPT In Frame",
+    "description": "ChatGPT inside an iFrame",
     "version": "0.0.1",
     "icons": {
         "16": "logo/logo-16.png",
@@ -11,18 +11,18 @@
     },
     "options_page": "settings/settings.html",
     "action": {
-        "default_title": "Chrome Addon v3 Starter",
+        "default_title": "ChatGPT In Frame",
         "default_popup": "popup/popup.html"
     },
-    "permissions": [],
+    "permissions": ["activeTab"],
     "host_permissions": [
         "*://*/*"
-    ],
-    "background": {
-        "service_worker": "service-worker.js"
-    },
-    "content_scripts": [{
-        "js": ["foreground.js"],
-        "matches": ["https://github.com/*"]
-    }]
+    ]//,
+    // "background": {
+    //     "service_worker": "service-worker.js"
+    // },
+    // "content_scripts": [{
+    //     "js": ["foreground.js"],
+    //     "matches": ["https://github.com/*"]
+    // }]
 }
